--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -26,11 +26,11 @@
                             <form id="loginForm" method="post">
                                 <div class="mb-3">
                                     <label for="email" class="form-label">E-mail</label>
-                                    <input type="email" class="form-control" id="email" name="email" value="caiorosilva@gmail.com">
+                                    <input type="email" class="form-control" id="email" name="email" value="">
                                 </div>
                                 <div class="mb-3">
                                     <label for="password" class="form-label">Senha</label>
-                                    <input type="password" class="form-control" id="password" name="password" value="Kksx!234">
+                                    <input type="password" class="form-control" id="password" name="password" value="">
                                 </div>
                                 <div>
                                     <button class="btn btn-primary">Fazer login</button>
@@ -48,7 +48,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
     <script>
-        const server = "http://localhost:3000"; // Caminho curto para a API
+        const server = "https://project-3-web-utfpr.herokuapp.com/"; // Caminho curto para a API
         const emailForm = document.getElementById("email"); // Pega o campo e-mail do formulário. Obs: não pega os valores.
         const passwordForm = document.getElementById("password"); // Pega o campo password do formulário. Obs: não pega os valores.
         const form = document.querySelector("form");
