--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -74,7 +74,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
     <script>
-        const endpoint = "http://localhost:3000"; // Caminho curto para a API
+        const endpoint = "https://project-3-web-utfpr.herokuapp.com/"; // Caminho curto para a API
         const form = document.getElementById('form');
         const name = document.getElementById('name');
         const email = document.getElementById('email');
