--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -48,7 +48,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
     <script>
-        const server = "https://project-3-web-utfpr.herokuapp.com/"; // Caminho curto para a API
+        const server = "https://project-3-web-utfpr.herokuapp.com"; // Caminho curto para a API
         const emailForm = document.getElementById("email"); // Pega o campo e-mail do formulário. Obs: não pega os valores.
         const passwordForm = document.getElementById("password"); // Pega o campo password do formulário. Obs: não pega os valores.
         const form = document.querySelector("form");
