--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -67,6 +67,9 @@
                 </div>
             </div>
         </div>
+        <div class="mt-5 text-center">
+            <a href="/logout" class="btn btn-dark">Deslogar</a>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
